users register and db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,19 +55,12 @@ services:
       - app-network
 #Docker Networks
 #PHPMYADMIN
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    container_name: phpmyadmin
-    environment:
-      PMA_PORT: 3306
-      PMA_HOST: db
-      PMA_USER: root
-      PMA_PASSWORD: root
-    ports:
-      - "8004:8004"
+  adminer:
+    image: adminer
+    container_name: adminer
     restart: always
-    depends_on:
-      - db
+    ports:
+      - 8080:8080
     networks:
       - app-network
 networks:
